[project]
name = "weather-forecast-ml"
version = "1.0.0"
description = "An advanced weather forecasting application combining real-time weather data with machine learning capabilities"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.24.3",
    "pandas==1.5.3",
    "plotly==5.15.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "scikit-learn==1.2.2",
    "streamlit==1.24.0",
]
