[project]
name = "weather-forecast-ml"
version = "1.0.0"
description = "An advanced weather forecasting application combining real-time weather data with machine learning capabilities"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.2.0",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "scikit-learn==1.6.0",
    "streamlit==1.41.1",
]
