[project]
name = "weather-forecast-ml"
version = "1.0.0"
description = "An advanced weather forecasting application combining real-time weather data with machine learning capabilities"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.24.4",
    "pandas==2.0.3",
    "plotly==5.18.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "scikit-learn==1.3.2",
    "streamlit==1.29.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/weather-forecast-ml"
Repository = "https://github.com/yourusername/weather-forecast-ml.git"
